# agents

./: .env.example  .gitignore  CLAUDE.md  README.md  app_structure.md  export_dialogues.py  pyproject.toml  test_combine_prompt.py  test_runner.py
.zed/: settings.json
app/: agent_0.py  agent_base.py  agent_registry.yml  agents.yml  chat_server.py  dynamic_agent_starter.py  models.py  specs.py  utils.py
app/agents/: __init__.py  agent.py  agent_info.py  info.py  routes.py
app/core/: models.py  provider.py  redis.py  redis_export.py  registry.py  utils.py
app/frontend/static/: style.css
app/frontend/templates/: index.html
app/helpers/: dialogues.py  export_dialogues.py  find_message.py  inspect_redis.py
scripts/: export_dialogues.py  run-agents.sh
tests/: __init__.py  test_combine_prompt.py
